--- a/04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m 2020/c_invoice0042m.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m 2020/c_invoice0042m.jrxml
@@ -2743,9 +2743,9 @@ WHERE
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="DejaVu Sans Mono" size="10" isBold="true"/>
+						<font fontName="DejaVu Sans Mono" size="10" isBold="true" isItalic="true"/>
 					</textElement>
-					<text><![CDATA[TOTALE FATTURA]]></text>
+					<text><![CDATA[TOTALE FATTURA/TOTAL INVOICE]]></text>
 				</staticText>
 				<textField isBlankWhenNull="true">
 					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="0" y="30" width="43" height="30" uuid="4deab5f5-ac7a-4a27-a53d-ab1a840bdda9">
