--- a/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m - new2020/m_inout_sub2.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m - new2020/m_inout_sub2.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.9.0.final utlizzo versione della libreria JasperReports6.9.0-cb8f9004be492ccc537180b49c026951f4220bf3  -->
+<!-- Created with Jaspersoft Studio version 6.12.2.final utlizzo versione della libreria JasperReports6.12.2-75c5e90a222ab406e416cbf590a5397028a52de3  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="m_inout_sub1" pageWidth="555" pageHeight="810" whenNoDataType="NoDataSection" columnWidth="555" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" isIgnorePagination="true" uuid="c33fbd9b-fd01-4855-baf8-57a853bc8344">
 	<property name="ireport.zoom" value="1.6934217901613329"/>
 	<property name="ireport.x" value="0"/>
@@ -184,7 +184,7 @@ ORDER BY m_inoutline_line ASC]]>
 				<property name="com.jaspersoft.studio.layout"/>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				<printWhenExpression><![CDATA[!($F{c_order_documentno}==null)]]></printWhenExpression>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="80" y="0" width="218" height="11" isRemoveLineWhenBlank="true" forecolor="#000DFF" uuid="86406d88-f223-4b23-9b47-c6221a713048">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
@@ -366,7 +366,7 @@ ORDER BY m_inoutline_line ASC]]>
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<printWhenExpression><![CDATA[!($F{ad_orginfo_lit_report_param}.charAt(16)=='N' && $F{m_product_producttype}.equals("S"))]]></printWhenExpression>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement positionType="Float" x="0" y="0" width="80" height="11" uuid="4b052802-baaa-417b-9c6e-acc2fa9934ba">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4d7e9fc9-7b59-4dc6-b9c7-ca6873f759f0"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
@@ -384,7 +384,7 @@ ORDER BY m_inoutline_line ASC]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{m_product_value}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement positionType="Float" x="80" y="0" width="240" height="11" forecolor="#000000" uuid="fed77b28-93de-4074-9ef2-7de8fdb1256b">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="5ad407ab-c715-4c2e-bb2f-7047aacdd74d"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
@@ -402,7 +402,7 @@ ORDER BY m_inoutline_line ASC]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{m_inoutline_name}!=null?$F{m_inoutline_name}:$F{m_product_name}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement positionType="Float" x="320" y="0" width="28" height="11" uuid="7ed35940-a07f-40fb-ab8e-1904ca2e9ba4">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a86d4b2d-6c4c-4f96-95ac-6b029c4b44dc"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
@@ -421,7 +421,7 @@ ORDER BY m_inoutline_line ASC]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{c_uom_trl_uomsymbol}.toUpperCase()]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="#,##0.###;(#,##0.###-)" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" pattern="#,##0.###;(#,##0.###-)" isBlankWhenNull="true">
 				<reportElement positionType="Float" x="348" y="0" width="62" height="11" uuid="b62dbd27-67d2-4ea3-8a5e-6990c3480174">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ba2cfe20-2175-4b31-8baf-0beb645f9c3f"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
@@ -440,7 +440,7 @@ ORDER BY m_inoutline_line ASC]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{m_inoutline_movementqty}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="#,##0.###;(#,##0.###-)" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" pattern="#,##0.###;(#,##0.###-)" isBlankWhenNull="true">
 				<reportElement positionType="Float" x="410" y="0" width="24" height="11" printWhenGroupChanges="Gruppo1" uuid="464b5c09-9c8e-40b4-a238-f6adcc7d1ebc">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="1f883e7f-cc62-46ec-ae69-e69dd0c98e00"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
@@ -458,7 +458,7 @@ ORDER BY m_inoutline_line ASC]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{m_inoutline_movementqty}.equals( $F{m_inoutline_qtyentered} )?"":$F{m_inoutline_qtyentered}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
 				<reportElement positionType="Float" x="454" y="0" width="36" height="11" uuid="a25c3e83-def8-4eeb-bfdc-e0f92efcc457">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a93aa641-21a3-457a-a04f-cc7fae8a5afe"/>
 				</reportElement>
@@ -475,7 +475,7 @@ ORDER BY m_inoutline_line ASC]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{c_orderine_priceactual}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="#,##0.###" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" pattern="#,##0.###" isBlankWhenNull="true">
 				<reportElement positionType="Float" x="434" y="0" width="20" height="11" isPrintInFirstWholeBand="true" uuid="43076217-cc0a-45a7-999e-0a197f5fba28">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="3e812aa9-72a7-4ce7-96f7-8f9ae23e1722"/>
 				</reportElement>
@@ -491,7 +491,7 @@ ORDER BY m_inoutline_line ASC]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{c_orderine_discount}.longValue()!=0?$F{c_orderine_discount}:""]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" pattern="¤#,##0.00;¤-#,##0.00" isBlankWhenNull="true">
 				<reportElement positionType="Float" x="490" y="0" width="65" height="11" uuid="58e9b5c9-7224-488c-9f80-864fd5f7d60c">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a93aa641-21a3-457a-a04f-cc7fae8a5afe"/>
 				</reportElement>
@@ -512,7 +512,7 @@ ORDER BY m_inoutline_line ASC]]>
 		<band height="11">
 			<property name="com.jaspersoft.studio.layout"/>
 			<printWhenExpression><![CDATA[(($F{ad_orginfo_lit_report_param}.charAt(6)) == 'Y')]]></printWhenExpression>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement positionType="Float" x="80" y="0" width="240" height="11" isRemoveLineWhenBlank="true" uuid="76bf83b5-50a4-4881-a43d-e06794e1d42d">
 					<printWhenExpression><![CDATA[(($F{ad_orginfo_lit_report_param}.charAt(6)) == 'Y')]]></printWhenExpression>
 				</reportElement>
@@ -532,7 +532,7 @@ ORDER BY m_inoutline_line ASC]]>
 		</band>
 		<band height="11">
 			<printWhenExpression><![CDATA[(($F{ad_orginfo_lit_report_param}.charAt(7)) == 'Y')]]></printWhenExpression>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement positionType="Float" x="80" y="0" width="240" height="11" isRemoveLineWhenBlank="true" uuid="2ce98b15-b62c-4485-9dfc-239b5807fdfb">
 					<printWhenExpression><![CDATA[(($F{ad_orginfo_lit_report_param}.charAt(7)) == 'Y')]]></printWhenExpression>
 				</reportElement>
@@ -552,7 +552,7 @@ ORDER BY m_inoutline_line ASC]]>
 		</band>
 		<band height="11">
 			<printWhenExpression><![CDATA[$F{ad_orginfo_lit_report_param}.charAt(13) =='Y' ? 1==1 :  $F{ad_orginfo_lit_report_param}.charAt(13) =='N' ? 1==2 :  $F{c_bpartner_lit_bpreportparam}.length()<1 ? 1==2 :$F{c_bpartner_lit_bpreportparam}.charAt(1)=='Y' ? 1==1 :1==2]]></printWhenExpression>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement positionType="Float" x="80" y="0" width="240" height="11" isRemoveLineWhenBlank="true" uuid="d0659c16-fb4e-41af-bff5-ed2bcf529a21">
 					<property name="com.jaspersoft.studio.unit.leftIndent" value="pixel"/>
 					<printWhenExpression><![CDATA[$F{ad_orginfo_lit_report_param}.charAt(13) =='Y' ? 1==1 :  $F{ad_orginfo_lit_report_param}.charAt(13) =='N' ? 1==2 :  $F{c_bpartner_lit_bpreportparam}.length()<1 ? 1==2 :$F{c_bpartner_lit_bpreportparam}.charAt(1)=='Y' ? 1==1 :1==2]]></printWhenExpression>
