--- a/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m - new2020/m_inout_vat.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m - new2020/m_inout_vat.jrxml
@@ -47,7 +47,7 @@ where m_inoutline.m_inout_id=$P{RECORD_ID}
 					<pen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="9" isBold="true"/>
+					<font fontName="DejaVu Sans Mono" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[RIEPILOGO IVA]]></text>
 			</staticText>
@@ -72,7 +72,7 @@ where m_inoutline.m_inout_id=$P{RECORD_ID}
 						<rightPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement verticalAlignment="Middle">
-						<font size="6" isBold="true"/>
+						<font fontName="DejaVu Sans Mono" size="6" isBold="true"/>
 					</textElement>
 					<text><![CDATA[COD. IVA]]></text>
 				</staticText>
@@ -88,7 +88,7 @@ where m_inoutline.m_inout_id=$P{RECORD_ID}
 						<rightPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font size="6" isBold="true"/>
+						<font fontName="DejaVu Sans Mono" size="6" isBold="true"/>
 					</textElement>
 					<text><![CDATA[IMPONIBILE]]></text>
 				</staticText>
@@ -104,7 +104,7 @@ where m_inoutline.m_inout_id=$P{RECORD_ID}
 						<rightPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font size="6" isBold="true"/>
+						<font fontName="DejaVu Sans Mono" size="6" isBold="true"/>
 					</textElement>
 					<text><![CDATA[IVA]]></text>
 				</staticText>
@@ -130,7 +130,7 @@ where m_inoutline.m_inout_id=$P{RECORD_ID}
 						<rightPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement verticalAlignment="Middle">
-						<font size="8"/>
+						<font fontName="DejaVu Sans Mono" size="8"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{taxindicator}]]></textFieldExpression>
 				</textField>
@@ -146,7 +146,7 @@ where m_inoutline.m_inout_id=$P{RECORD_ID}
 						<rightPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font size="8"/>
+						<font fontName="DejaVu Sans Mono" size="8"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{taxbaseamt}]]></textFieldExpression>
 				</textField>
@@ -162,7 +162,7 @@ where m_inoutline.m_inout_id=$P{RECORD_ID}
 						<rightPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font size="8"/>
+						<font fontName="DejaVu Sans Mono" size="8"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{taxamt}]]></textFieldExpression>
 				</textField>
